Replace Vincit references with me

--- a/src/styl/components/post-list.styl
+++ b/src/styl/components/post-list.styl
@@ -7,7 +7,7 @@
     &--content {
       overflow: hidden
 
-      .vincit-image {
+      .k1sul1-image {
         float: left
         margin-right: r(25px)
         max-width: r(200px)
@@ -21,7 +21,7 @@
         }
       }
 
-      .vincit-excerpt {
+      .k1sul1-excerpt {
 
       }
     }
