--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: WordPress theme base
-Theme URI: https://github.com/Vincit/wordpress-theme-base
-Author: Vincit
-Author URI: https://vincit.com
+Theme URI: https://github.com/k1/wordpress-theme-base
+Author: k1
+Author URI: https://k1sul1.com
 Text Domain: wordpress-theme-base
 */
 
