Add a sample block

--- a/src/styl/admin.styl
+++ b/src/styl/admin.styl
@@ -1,3 +1,7 @@
-body {
-  background: pink
+@import 'blocks.styl'
+
+.edit-post-visual-editor .editor-post-title,
+.edit-post-visual-editor .editor-block-list__block {
+	// max-width:	1100px;
+  max-width: 100%;
 }
