Slowly getting there

--- a/src/styl/admin.styl
+++ b/src/styl/admin.styl
@@ -1,7 +1,9 @@
-@import 'blocks.styl'
+@import 'common/variables'
+@import 'common/mixins'
+@import 'common/typography'
+@import 'common/schemes'
+@import 'common/k1'
 
-.edit-post-visual-editor .editor-post-title,
-.edit-post-visual-editor .editor-block-list__block {
-	// max-width:	1100px;
-  max-width: 100%;
-}
+@import 'admin/*'
+@import 'templates/*'
+@import 'blocks/*'
