--- a/src/styl/client.styl
+++ b/src/styl/client.styl
@@ -1,1 +1,17 @@
-@import 'blocks.styl'
+@import 'common/mixins'
+@import 'common/variables'
+@import 'common/typography'
+@import 'common/schemes'
+@import 'common/a11y'
+@import 'common/k1'
+
+@import 'layout/general'
+@import 'layout/archive'
+@import 'layout/front-page'
+@import 'layout/search'
+@import 'layout/single'
+
+@import 'templates/background-media'
+
+@import 'blocks/hero'
+@import 'blocks/wysiwyg-columns'
