--- a/src/styl/blocks/wysiwyg-columns.styl
+++ b/src/styl/blocks/wysiwyg-columns.styl
@@ -3,7 +3,7 @@
     display: flex
     flex-flow: row wrap
     justify-content: center
-    align-items: space-between
+    align-items: center
   }
 
   &__column {
