--- a/src/styl/common/mixins.styl
+++ b/src/styl/common/mixins.styl
@@ -237,30 +237,30 @@ srText() {
  * https://css-tricks.com/logic-in-media-queries/
  */
 
-forDesktopAndUp()
-  @media (min-width: bp.lg + 1) {
-    {block}
-  }
-
-forTabletAndUp()
-  @media (min-width: bp.md + 1) {
-    {block}
-  }
-
-forTabletAndDown() {
-  @media (max-width: bp.md) {
+forDesktop() {
+  @media (min-width: bp.lg) {
     {block}
   }
 }
 
-forPhoneAndUp() {
-  @media (min-width: bp.sm + 1) {
-    {block}
+/**
+ * Tablet media queries often work for phones too, so styles will be applied
+ * to mobile devices as well by default.
+ */
+forTablet(only = false) {
+  if (only == false) {
+    @media (max-width: bp.md) {
+      {block}
+    }
+  } else {
+    @media (min-width: bp.md) and (max-width: bp.lg) {
+      {block}
+    }
   }
 }
 
-forPhoneAndDown() {
-  @media (max-width: bp.sm) {
+forPhone() {
+  @media (min-width: 0px) and (max-width: bp.sm) {
     {block}
   }
 }
@@ -277,5 +277,31 @@ forTinyPhone() {
 forLandscape() {
   @media (orientation:landscape) and (max-width: bp.md) {
     {block}
+  }
+}
+
+/**
+ * Mixin used to autogenerate classes that can be applied from the GUI.
+ * You're probably doing something wrong if you're using this in your code.
+ *
+ * I haven't figured out a way to automate this; manual work
+ */
+hideForBP(bp) {
+  if (bp == 'xs') {
+    +forTinyPhone() {
+      display: none !important
+    }
+  } else if (bp == 'sm') {
+    +forPhone() {
+      display: none !important
+    }
+  } else if (bp == 'md') {
+    +forTablet(true) {
+      display: none !important
+    }
+  } else if (bp == 'lg') {
+    +forDesktop() {
+      display: none !important
+    }
   }
 }
