--- a/src/styl/common/typography.styl
+++ b/src/styl/common/typography.styl
@@ -23,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: fs.h1
 
-  +forTabletAndDown() {
+  +forTablet() {
     font-size: r(40px)
   }
 }
@@ -31,7 +31,7 @@ h1 {
 h2 {
   font-size: fs.h2
 
-  +forTabletAndDown() {
+  +forTablet() {
     font-size: r(36px)
   }
 }
@@ -39,7 +39,7 @@ h2 {
 h3 {
   font-size: fs.h3
 
-  +forTabletAndDown() {
+  +forTablet() {
     font-size: r(30px)
   }
 }
@@ -47,7 +47,7 @@ h3 {
 h4 {
   font-size: fs.h4
 
-  +forTabletAndDown() {
+  +forTablet() {
     font-size: r(28px)
   }
 }
