--- a/src/styl/layout/general.styl
+++ b/src/styl/layout/general.styl
@@ -1,3 +1,11 @@
+html {
+  box-sizing: border-box
+}
+
+*, *:before, *:after {
+  box-sizing: inherit
+}
+
 .k1-root {
 
 }
@@ -7,7 +15,7 @@
   padding-left: ws.containerLeft
   padding-right: ws.containerRight
 
-  +forDesktopAndUp() {
+  +forDesktop() {
     max-width: 1366px;
     margin-left: auto
     margin-right: auto
