Fix earlier mistakes

--- a/src/styl/blocks/hero.styl
+++ b/src/styl/blocks/hero.styl
@@ -1,4 +1,6 @@
 .k1-hero {
+  padding-top: ws.sectionTop
+  padding-bottom: ws.sectionBottom - r(35px)
   position: relative
   overflow: hidden
   min-height: 50vh
