--- a/src/styl/common/mixins.styl
+++ b/src/styl/common/mixins.styl
@@ -185,7 +185,7 @@ generatePositions(selector, method = 'position') {
       }
 
       &--centerBottom {
-        align-items: center
+        align-items: flex-end
         justify-content: flex-end
       }
 
