--- a/src/styl/common/schemes.styl
+++ b/src/styl/common/schemes.styl
@@ -15,25 +15,28 @@ for key in schemes {
     }
   }
 
-  .k1-scheme--background--{key} {
-    background: schemes[key].background
-  }
 
-  .k1-scheme--headings--{key} {
-    h1, h2, h3, h4, h5, h6 {
-      color: schemes[key].headings
+  .k1-scheme {
+    &.k1-scheme--background-{key} {
+      background: schemes[key].background
     }
-  }
 
-  .k1-scheme--text-{key} {
-    ul, ol, p {
-      color: schemes[key].text
+    &.k1-scheme--headings-{key} {
+      h1, h2, h3, h4, h5, h6 {
+        color: schemes[key].headings
+      }
     }
-  }
 
-  .k1-scheme--links-{key} {
-    a {
-      color: schemes[key].links
+    &.k1-scheme--text-{key} {
+      ul, ol, p {
+        color: schemes[key].text
+      }
+    }
+
+    &.k1-scheme--links-{key} {
+      a {
+        color: schemes[key].links
+      }
     }
   }
 }
