Cache blocks, allow using blocks manually

--- a/src/styl/common/mixins.styl
+++ b/src/styl/common/mixins.styl
@@ -186,7 +186,7 @@ generatePositions(selector, method = 'position') {
 
       &--centerBottom {
         align-items: flex-end
-        justify-content: flex-end
+        justify-content: center
       }
 
       &--rightBottom {
