Introduce new mixins

--- a/src/styl/blocks/hero.styl
+++ b/src/styl/blocks/hero.styl
@@ -1,6 +1,5 @@
 .k1-hero {
-  padding-top: ws.sectionTop
-  padding-bottom: ws.sectionBottom - r(35px)
+  whitespace('padding', ws.section)
   position: relative
   overflow: hidden
   min-height: 50vh
