--- a/src/styl/blocks/wysiwyg-columns.styl
+++ b/src/styl/blocks/wysiwyg-columns.styl
@@ -2,7 +2,7 @@
   padding-top: ws.sectionTop
   padding-bottom: ws.sectionBottom
 
-  .k1-container {
+  > .k1-container {
     display: flex
     flex-flow: row nowrap
     justify-content: space-between
