--- a/src/styl/common/k1.styl
+++ b/src/styl/common/k1.styl
@@ -26,3 +26,41 @@
   display: inline-block
   max-width: r(50px)
 }
+
+.k1-tinymce {
+  > * {
+    margin-left: auto
+    margin-right: auto
+  }
+}
+
+.k1-coreblock {
+  max-width: 100%
+  overflow: hidden
+}
+
+.k1-block {
+  max-width: 100%
+  overflow: hidden
+}
+
+.k1-root {
+
+}
+
+.k1-container {
+  width: 100%
+  max-width: 100%
+  overflow: hidden
+  whitepace('padding', ws.container)
+
+  +forDesktop() {
+    max-width: 1366px;
+    margin-left: auto
+    margin-right: auto
+  }
+
+  +forPhone() {
+    whitepace('padding', ws.container, '/ 2')
+  }
+}
