--- a/src/styl/common/typography.styl
+++ b/src/styl/common/typography.styl
@@ -14,6 +14,7 @@ html {
 h1, h2, h3, h4, h5, h6 {
   font-family: font.secondary
   line-height: 1.2
+  font-weight: 700
   color: inherit
   margin: 0
   margin-top: ws.elementTop
@@ -65,6 +66,7 @@ p {
   margin: 0
   margin-top: ws.elementTop
   margin-bottom: ws.elementBottom
+  max-width: r(800px)
 }
 
 ul, ol {
