--- a/src/styl/layout/general.styl
+++ b/src/styl/layout/general.styl
@@ -9,26 +9,9 @@ html {
 img {
   max-width: 100%
   height: auto
+  vertical-align: middle // Removes gap from bottom when used in links and such
 }
 
 .wp-caption {
   width: auto !important // Why does WP put inline styles?
-}
-
-.k1-root {
-
-}
-
-.k1-container {
-  width: 100%
-  max-width: 100%
-  padding-left: ws.containerLeft
-  padding-right: ws.containerRight
-  overflow: hidden
-
-  +forDesktop() {
-    max-width: 1366px;
-    margin-left: auto
-    margin-right: auto
-  }
 }
