--- a/src/styl/blocks/wysiwyg-columns.styl
+++ b/src/styl/blocks/wysiwyg-columns.styl
@@ -1,6 +1,5 @@
 .k1-wcolumns {
-  padding-top: ws.sectionTop
-  padding-bottom: ws.sectionBottom
+  whitespace('padding', ws.section)
 
   > .k1-container {
     display: flex
