--- a/src/styl/templates/search.styl
+++ b/src/styl/templates/search.styl
@@ -5,6 +5,7 @@
 
   input[type="search"] {
     height: r(50px)
+    width: calc(100% - 50px)
     line-height: @height
     font-size: fs.p
     display: inline-block
