Play nicely with core styles

--- a/src/styl/admin.styl
+++ b/src/styl/admin.styl
@@ -4,6 +4,6 @@
 @import 'common/schemes'
 @import 'common/k1'
 
-@import 'admin/*'
+@import 'admin/gutenberg'
 @import 'templates/*'
 @import 'blocks/*'
