--- a/src/styl/client.styl
+++ b/src/styl/client.styl
@@ -15,5 +15,6 @@
 @import 'templates/background-media'
 @import 'templates/search'
 
+@import 'blocks/core'
 @import 'blocks/hero'
 @import 'blocks/wysiwyg-columns'
