--- a/src/styl/common/variables.styl
+++ b/src/styl/common/variables.styl
@@ -22,6 +22,11 @@ fs = {
 
 // Short for whitespace, used for paddings and margins, and by mixins
 ws = {
+  center: {
+    left: auto
+    right: auto
+  }
+
   element: {
     top: r(20px)
     bottom: r(20px)
@@ -35,5 +40,13 @@ ws = {
   container: {
     left: r(20px)
     right: r(20px)
+  }
+}
+
+width = {
+  block: {
+    default: r(800px)
+    wide: r(1200px)
+    full: 100%
   }
 }
