--- a/src/styl/layout/header.styl
+++ b/src/styl/layout/header.styl
@@ -23,6 +23,9 @@
 }
 
 .k1-navigation {
+  position: relative
+  z-index: 10000
+
   ul {
     margin: 0
     padding: 0
@@ -60,6 +63,11 @@
 
     +forTablet() {
       display: block
+
+      > a {
+        padding-left: 0
+        padding-right: 0
+      }
     }
   }
 
