Get rid of globs

--- a/src/styl/admin.styl
+++ b/src/styl/admin.styl
@@ -1,9 +1,9 @@
-@import 'common/variables'
 @import 'common/mixins'
+@import 'common/variables'
 // @import 'common/typography' // Imported in admin/gutenberg.styl
 @import 'common/schemes'
 @import 'common/k1'
 
-@import 'admin/gutenberg'
-@import 'templates/*'
-@import 'blocks/*'
+@import 'admin'
+@import 'templates'
+@import 'blocks'
