--- a/src/styl/blocks/core.styl
+++ b/src/styl/blocks/core.styl
@@ -9,6 +9,10 @@
     max-width: width.block.wide
   }
 
+  .wp-block-quote {
+    whitespace('margin', ws.center)
+  }
+
   .wp-block-image {
     display: inline-block
 
