--- a/src/styl/client.styl
+++ b/src/styl/client.styl
@@ -5,16 +5,6 @@
 @import 'common/a11y'
 @import 'common/k1'
 
-@import 'layout/general'
-@import 'layout/header'
-@import 'layout/archive'
-@import 'layout/front-page'
-@import 'layout/search'
-@import 'layout/single'
-
-@import 'templates/background-media'
-@import 'templates/search'
-
-@import 'blocks/core'
-@import 'blocks/hero'
-@import 'blocks/wysiwyg-columns'
+@import 'layout'
+@import 'templates'
+@import 'blocks'
