--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: WordPress theme base
-Theme URI: https://github.com/k1/wordpress-theme-base
-Author: k1
-Author URI: https://k1sul1.com
+Theme URI: https://github.com/k1sul1/wordpress-theme-base
+Author: k1sul1
+Author URI: https://kisu.li
 Text Domain: wordpress-theme-base
 */
 
