Change  forTablet breakpoint

--- a/src/styl/common/mixins/media.styl
+++ b/src/styl/common/mixins/media.styl
@@ -16,7 +16,7 @@ forDesktop() {
  */
 forTablet(only = false) {
   if (only == false) {
-    @media (max-width: bp.md) {
+    @media (max-width: bp.lg) {
       {block}
     }
   } else {
